# Market-Management-System

./: README.md  analysis.ipynb  inventory.json  main.py  pyproject.toml  requirements.txt
DataBase/: custumerDB.csv  feedbackDB.csv  salesDB.csv
DataBase/Payment-Bills/: BILL-C3482828.txt
Payment Bills/: BILL-C3482828.txt
Payment-Bills/: BILL-C3482828.txt
main/: analysis.ipynb  main.py
src/: inventory.json  methods.py
