[project]
name = "market-management-system"
version = "0.1.0"
description = "A Python-Based Backend Only Market Management System is designed to simulate a real-world retail store workflow. The system covers inventory handling, customer management, sales processing, billing, payment support, database storage, and business analytics."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "pandas>=3.0.0",
    "qrcode[pil]>=8.2",
]
